force-app/main/default/objects/Case/fields/Charge__c.field-meta.xml
<CustomField>
    <fullName>Charge__c</fullName>
    <description>2PACE</description>
    <inlineHelpText>Charge estimée en jour</inlineHelpText>
    <label>⌚Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>