force-app/main/default/objects/Case/fields/Commentaire__c.field-meta.xml
<CustomField>
    <fullName>Commentaire__c</fullName>
    <description>2PACE</description>
    <label>💬 Commentaire</label>
    <type>TextArea</type>
</CustomField>