force-app/main/default/objects/Case/fields/Cout_TMA__c.field-meta.xml
<CustomField>
    <fullName>Cout_TMA__c</fullName>
    <formula>Charge__c * 705</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>💶 Coût TMA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>