force-app/main/default/objects/Case/fields/Qualification__c.field-meta.xml
<CustomField>
    <fullName>Qualification__c</fullName>
    <description>2PACE</description>
    <inlineHelpText>Comment classifieriez vous le case?</inlineHelpText>
    <label>🗃️ Qualification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>COMMANDE</fullName>
            </value>
            <value>
                <fullName>FACTURE</fullName>
            </value>
            <value>
                <fullName>COMPTABILITE</fullName>
            </value>
            <value>
                <fullName>EMAILS EXTERNES</fullName>
            </value>
            <value>
                <fullName>USER</fullName>
            </value>
            <value>
                <fullName>ACCOUNT</fullName>
            </value>
            <value>
                <fullName>PRODUCT</fullName>
            </value>
            <value>
                <fullName>PRICING</fullName>
            </value>
            <value>
                <fullName>OPPORTUNITY</fullName>
            </value>
            <value>
                <fullName>QUOTE</fullName>
            </value>
            <value>
                <fullName>RAPPORT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>