force-app/main/default/objects/Case/recordTypes/BUG.recordType-meta.xml
<RecordType>
    <fullName>BUG</fullName>
    <active>true</active>
    <businessProcess>%3F%3FBUG</businessProcess>
    <label>🪲 BUG</label>
</RecordType>