force-app/main/default/objects/Case/recordTypes/RecordType.recordType-meta.xml
<RecordType>
    <fullName>RecordType</fullName>
    <active>true</active>
    <businessProcess>%3F%3F Change Request</businessProcess>
    <label>🛠️ Change Request</label>
</RecordType>