force-app/main/default/objects/Case/recordTypes/Training.recordType-meta.xml
<RecordType>
    <fullName>Training</fullName>
    <active>true</active>
    <businessProcess>%3F%3F%E2%80%8D%3F%3FTraining</businessProcess>
    <label>🧑‍🎓Training</label>
</RecordType>